Modified Lists in Cors Config